--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.8'
+
 services:
   postgres:
-    container_name: nest-db
+    container_name: nest-clean-pg
     image: postgres
     ports:
       - 5432:5432
