--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:docker@localhost:5432/nestdb?schema=public"
+DATABASE_URL="postgresql://postgres:docker@localhost:5432/nest-clean?schema=public"
