--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /dist
 /node_modules
 /build
-
+private_key-base-64.txt
 # Logs
 logs
 *.log
@@ -54,3 +54,7 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+private_key.pem
+public_key.pem
+public_key.base64.txt
+private_key-base64.txt
