--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
     "paths": {
       "@controllers/*": [
         "src/controllers/*"
+      ],
+      "@/*": [
+        "src/*"
       ]
     }
   }
